--- a/irods-icommands/Dockerfile
+++ b/irods-icommands/Dockerfile
@@ -1,21 +1,20 @@
 FROM ubuntu:14.04
 
+ARG ENV_IRODS_VERSION
+
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    apt-transport-https \
     wget \
     libfuse2 \
     libcurl4-gnutls-dev
 
-RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
-ENV IRODS_VERSION 4.1.12
-
 # install iRODS icommands
-
-RUN wget ftp://ftp.renci.org/pub/irods/releases/${IRODS_VERSION}/ubuntu14/irods-icommands-${IRODS_VERSION}-ubuntu14-x86_64.deb -O /tmp/irods-icat.deb \
-    && dpkg -i /tmp/irods-icat.deb
+RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
+    && echo "deb [arch=amd64] https://packages.irods.org/apt/ trusty main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
+    && apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    irods-icommands=${ENV_IRODS_VERSION}
 
 RUN useradd -ms /bin/bash irods
 WORKDIR /home/irods
