--- a/irods-icommands/Dockerfile
+++ b/irods-icommands/Dockerfile
@@ -1,6 +1,9 @@
-FROM ubuntu:14.04
+FROM ubuntu:16.04
 
 ARG ENV_IRODS_VERSION
+
+# Use apt-get NL mirrors
+RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/apt/sources.list && apt-get update
 
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
@@ -11,7 +14,7 @@ RUN apt-get update \
 
 # install iRODS icommands
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
-    && echo "deb [arch=amd64] https://packages.irods.org/apt/ trusty main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
+    && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     irods-icommands=${ENV_IRODS_VERSION}
