Installed libxml2 which should be a dependency of irods-server (RITDEV-277)

--- a/ires/Dockerfile
+++ b/ires/Dockerfile
@@ -21,6 +21,7 @@ RUN apt-get update \
     libfuse2 \
     libjson-perl \
     librabbitmq-dev \
+    libxml2 \
     python \
     python-psutil \
     python-requests \
