--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update \
     libfuse2 \
     libjson-perl \
     librabbitmq-dev \
+    libxml2 \
     python \
     python-psutil \
     python-requests \
