docker-dev light version for iRODS rados support Commented out a lot of functionality. Minimal viable iRODS instance remains.

--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -90,6 +90,6 @@ ADD filebeat.yml /etc/filebeat/filebeat.yml
 
 ###############################################################################
 
-VOLUME [ "/rules", "/helpers", "/microservices" ]
+# VOLUME [ "/rules", "/helpers", "/microservices" ]
 
 ENTRYPOINT [ "/opt/irods/bootstrap.sh" ]
