--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,41 @@
 version: '2'
 services:
-  pacman:
-    build:
-      context: pacman/
-      args:
-        ENV_XDEBUG_VERSION: ${ENV_XDEBUG_VERSION}
-        ENV_DRUPAL_VERSION: ${ENV_DRUPAL_VERSION}
-        ENV_DRUPAL_VERSION_MD5: ${ENV_DRUPAL_VERSION_MD5}
-        ENV_ISLANDORA_VERSION: ${ENV_ISLANDORA_VERSION}
-        ENV_DOCKERIZE_VERSION: ${ENV_DOCKERIZE_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
-    hostname: pacman
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./externals/handsontable:/var/www/html/sites/all/modules/handsontable
-      - ./externals/islandora_ontology_autocomplete:/var/www/html/sites/all/modules/islandora_ontology_autocomplete
-      - ./externals/islandora_crossref_lookup:/var/www/html/sites/all/modules/islandora_crossref_lookup
-      - ./externals/rit-pacman:/var/www/html/sites/all/modules/pacman
-      - ./externals/rit_landing_page:/var/www/html/sites/all/modules/rit_landing_page
-      - ./externals/rit_forms:/var/www/html/sites/all/modules/rit_forms
-      - ./externals/rit_faker:/var/www/html/sites/all/modules/rit_faker
-      - ./externals/fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
-    environment:
-      IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
-      IRODS_WEBDAV_ENV_VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
-      IRODS_HOST: irods
-      IRODS_ENV_RODS_PASSWORD: irods
-      DWH_FRONTEND_ENV_VIRTUAL_HOST: dwh.${RIT_ENV}.rit.unimaas.nl
-      CROSSREF_LOOKUP_HOST: crossref-lookup
-      VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
-      OLS_URL: http://ols.tst.rit.unimaas.nl
-      LOGSTASH_TAGS: PACMAN
-      JWT_SECRET: foobar
-      DH_MAILER_ENDPOINT : http://mailer.${RIT_ENV}.rit.unimaas.nl/email/send
-      DH_MAILER_TO_ADRESS : datahub@maastrichtuniversity.nl
-      DH_MAILER_USERNAME : user
-      DH_MAILER_PASSWORD : password
+  # pacman:
+    # build:
+      # context: pacman/
+      # args:
+        # ENV_XDEBUG_VERSION: ${ENV_XDEBUG_VERSION}
+        # ENV_DRUPAL_VERSION: ${ENV_DRUPAL_VERSION}
+        # ENV_DRUPAL_VERSION_MD5: ${ENV_DRUPAL_VERSION_MD5}
+        # ENV_ISLANDORA_VERSION: ${ENV_ISLANDORA_VERSION}
+        # ENV_DOCKERIZE_VERSION: ${ENV_DOCKERIZE_VERSION}
+        # ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+    # hostname: pacman
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+      # - ./externals/handsontable:/var/www/html/sites/all/modules/handsontable
+      # - ./externals/islandora_ontology_autocomplete:/var/www/html/sites/all/modules/islandora_ontology_autocomplete
+      # - ./externals/islandora_crossref_lookup:/var/www/html/sites/all/modules/islandora_crossref_lookup
+      # - ./externals/rit-pacman:/var/www/html/sites/all/modules/pacman
+      # - ./externals/rit_landing_page:/var/www/html/sites/all/modules/rit_landing_page
+      # - ./externals/rit_forms:/var/www/html/sites/all/modules/rit_forms
+      # - ./externals/rit_faker:/var/www/html/sites/all/modules/rit_faker
+      # - ./externals/fhml_um_theme_demo:/var/www/html/sites/all/themes/fhml_um_theme_demo
+    # environment:
+      # IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
+      # IRODS_WEBDAV_ENV_VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
+      # IRODS_HOST: irods
+      # IRODS_ENV_RODS_PASSWORD: irods
+      # DWH_FRONTEND_ENV_VIRTUAL_HOST: dwh.${RIT_ENV}.rit.unimaas.nl
+      # CROSSREF_LOOKUP_HOST: crossref-lookup
+      # VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
+      # OLS_URL: http://ols.tst.rit.unimaas.nl
+      # LOGSTASH_TAGS: PACMAN
+      # JWT_SECRET: foobar
+      # DH_MAILER_ENDPOINT : http://mailer.${RIT_ENV}.rit.unimaas.nl/email/send
+      # DH_MAILER_TO_ADRESS : datahub@maastrichtuniversity.nl
+      # DH_MAILER_USERNAME : user
+      # DH_MAILER_PASSWORD : password
   irods:
     build:
       context: icat/
@@ -62,12 +62,12 @@ services:
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       - default
-      - common_default
+      # - common_default
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ./externals/irods-ruleset:/rules
-      - ./externals/irods-microservices:/microservices
+      # - ./externals/irods-ruleset:/rules
+      # - ./externals/irods-microservices:/microservices
   ires:
     build:
       context: ires/
@@ -90,13 +90,13 @@ services:
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       - default
-      - common_default
+      # - common_default
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ./externals/irods-ruleset:/rules
-      - ./externals/irods-microservices:/microservices
-      - ./externals/irods-helper-cmd:/helpers
+      # - ./externals/irods-ruleset:/rules
+      # - ./externals/irods-microservices:/microservices
+      # - ./externals/irods-helper-cmd:/helpers
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
   ires-centos:
@@ -122,14 +122,14 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ./externals/irods-ruleset:/rules
-      - ./externals/irods-microservices:/microservices
-      - ./externals/irods-helper-cmd:/helpers
+      # - ./externals/irods-ruleset:/rules
+      # - ./externals/irods-microservices:/microservices
+      # - ./externals/irods-helper-cmd:/helpers
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
     networks:
       - default
-      - common_default
+      # - common_default
   ires-ceph:
     build:
       context: ires-ceph/
@@ -152,23 +152,23 @@ services:
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       - default
-      - common_default
+      # - common_default
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
-      - ./externals/irods-ruleset:/rules
-      - ./externals/irods-microservices:/microservices
-      - ./externals/irods-helper-cmd:/helpers
+      # - ./externals/irods-ruleset:/rules
+      # - ./externals/irods-microservices:/microservices
+      # - ./externals/irods-helper-cmd:/helpers
       - ./externals/irods_resource_plugin_rados:/irods_resource_plugin_rados
-  db:
-    image: mysql:${ENV_MYSQL_VERSION}
-    hostname: db
-    environment:
-      MYSQL_DATABASE: pacman
-      MYSQL_ROOT_PASSWORD: foobar
-      LOGSPOUT: ignore
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
+  # db:
+    # image: mysql:${ENV_MYSQL_VERSION}
+    # hostname: db
+    # environment:
+      # MYSQL_DATABASE: pacman
+      # MYSQL_ROOT_PASSWORD: foobar
+      # LOGSPOUT: ignore
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
   irods-db:
     image: postgres:${ENV_POSTGRES_VERSION}
     hostname: irods-db
@@ -177,124 +177,124 @@ services:
       LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
-  irods-frontend:
-    build:
-      context: externals/irods-frontend/
-      args:
-        ENV_IRODS_REST_VERSION: ${ENV_IRODS_REST_VERSION}
-        ENV_CLOUDBROWSER_VERSION: ${ENV_CLOUDBROWSER_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
-    hostname: irods-frontend
-    environment:
-      VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
-      PACMAN_HOST: http://pacman.${RIT_ENV}.rit.unimaas.nl
-      # logs are sent via filebeat, so logspout should be ignored
-      LOGSPOUT: ignore
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    networks:
-      - default
-      - common_default
-  davrods:
-    build:
-      context: externals/rit-davrods/
-      args:
-        ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
-        ENV_DAVRODS_VERSION: ${ENV_DAVRODS_VERSION}
-    environment:
-      VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
-      LOGSTASH_TAGS: DAVRODS
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    networks:
-      - default
-      - common_default
-  metalnx:
-    build: externals/metalnx-web/packaging/docker/
-    hostname: metalnx
-    environment:
-      IRODS_HOST: irods
-      IRODS_PORT: 1247
-      IRODS_ZONE: nlmumc
-      IRODS_USER: rods
-      IRODS_PASS: irods
-      METALNX_POSTGRES_HOST: metalnx-db
-      METALNX_POSTGRES_DB_NAME: metalnx
-      METALNX_POSTGRES_DB_USER: metalnx
-      METALNX_POSTGRES_DB_PASS: foobar
-      METALNX_RUN_SYNC_JOBS: "false"
-      VIRTUAL_HOST: metalnx.${RIT_ENV}.rit.unimaas.nl
-      VIRTUAL_PORT: 8080
-      LOGSTASH_TAGS: METALNX
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-  metalnx-db:
-    image: postgres:${ENV_POSTGRES_VERSION}
-    hostname: metalnx-db
-    environment:
-      POSTGRES_USER: metalnx
-      POSTGRES_PASSWORD: foobar
-      LOGSPOUT: ignore
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-  mirthconnect:
-    build:
-      context: mirthconnect/
-      args:
-        ENV_MIRTH_CONNECT_VERSION: ${ENV_MIRTH_CONNECT_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
-    hostname: mirthconnect
-    ports:
-      - "8443:8443"
-      - "6661-6671:6661-6671"
-    environment:
-      PGPASSWORD: foobar
-      RIT_ENV: ${RIT_ENV}
-      VIRTUAL_HOST: mirthconnect.${RIT_ENV}.rit.unimaas.nl
-      # dev only, in acc/prod MIRTH is not in a docker container
-      LOGSTASH_TAGS: MIRTH-UM
-      LOGSPOUT: ignore
-    networks:
-      - default
-      - oculus_default
-      - common_default
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./externals/channels:/opt/channels
-      - ./externals/alerts:/opt/alerts
-      - ./channels-backup:/opt/channels-backup
-  crossref-lookup:
-    build: externals/crossref-lookup
-    volumes:
-      - ./externals/crossref-lookup/app:/usr/src/app
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.rit.unimaas.nl
-      LOGSTASH_TAGS: CROSSREF_LOOKUP
-    networks:
-      - default
-  epicpid:
-    build: externals/epicpid-microservice/docker
-    volumes:
-      - ./externals/epicpid-microservice/:/opt/app
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      VIRTUAL_HOST: epicpid.${RIT_ENV}.rit.unimaas.nl
-      LOGSTASH_TAGS: EPIC_PID
-      LOG_LEVEL: DEBUG
-      USERNAME: user
-      PASSWORD: foobar
-      RABBITMQ_HOST : rabbitmq
-      RABBITMQ_USER : user
-      RABBITMQ_PASS : password
-      RABBITMQ_PORT: 5672
-      EPIC_CREDENTIALS: my_credentials_test.json
-      REQUESTS_CA_BUNDLE: /opt/epic5storagesurfsaranlCHAIN.crt
-    networks:
-      - default
-      - common_default
-networks:
-  oculus_default:
-    external: true
-  common_default:
-    external: true
+  # irods-frontend:
+    # build:
+      # context: externals/irods-frontend/
+      # args:
+        # ENV_IRODS_REST_VERSION: ${ENV_IRODS_REST_VERSION}
+        # ENV_CLOUDBROWSER_VERSION: ${ENV_CLOUDBROWSER_VERSION}
+        # ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+    # hostname: irods-frontend
+    # environment:
+      # VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
+      # PACMAN_HOST: http://pacman.${RIT_ENV}.rit.unimaas.nl
+      # # logs are sent via filebeat, so logspout should be ignored
+      # LOGSPOUT: ignore
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+    # networks:
+      # - default
+      # - common_default
+  # davrods:
+    # build:
+      # context: externals/rit-davrods/
+      # args:
+        # ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
+        # ENV_DAVRODS_VERSION: ${ENV_DAVRODS_VERSION}
+    # environment:
+      # VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
+      # LOGSTASH_TAGS: DAVRODS
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+    # networks:
+      # - default
+      # - common_default
+  # metalnx:
+    # build: externals/metalnx-web/packaging/docker/
+    # hostname: metalnx
+    # environment:
+      # IRODS_HOST: irods
+      # IRODS_PORT: 1247
+      # IRODS_ZONE: nlmumc
+      # IRODS_USER: rods
+      # IRODS_PASS: irods
+      # METALNX_POSTGRES_HOST: metalnx-db
+      # METALNX_POSTGRES_DB_NAME: metalnx
+      # METALNX_POSTGRES_DB_USER: metalnx
+      # METALNX_POSTGRES_DB_PASS: foobar
+      # METALNX_RUN_SYNC_JOBS: "false"
+      # VIRTUAL_HOST: metalnx.${RIT_ENV}.rit.unimaas.nl
+      # VIRTUAL_PORT: 8080
+      # LOGSTASH_TAGS: METALNX
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+  # metalnx-db:
+    # image: postgres:${ENV_POSTGRES_VERSION}
+    # hostname: metalnx-db
+    # environment:
+      # POSTGRES_USER: metalnx
+      # POSTGRES_PASSWORD: foobar
+      # LOGSPOUT: ignore
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+  # mirthconnect:
+    # build:
+      # context: mirthconnect/
+      # args:
+        # ENV_MIRTH_CONNECT_VERSION: ${ENV_MIRTH_CONNECT_VERSION}
+        # ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+    # hostname: mirthconnect
+    # ports:
+      # - "8443:8443"
+      # - "6661-6671:6661-6671"
+    # environment:
+      # PGPASSWORD: foobar
+      # RIT_ENV: ${RIT_ENV}
+      # VIRTUAL_HOST: mirthconnect.${RIT_ENV}.rit.unimaas.nl
+      # # dev only, in acc/prod MIRTH is not in a docker container
+      # LOGSTASH_TAGS: MIRTH-UM
+      # LOGSPOUT: ignore
+    # networks:
+      # - default
+      # - oculus_default
+      # - common_default
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+      # - ./externals/channels:/opt/channels
+      # - ./externals/alerts:/opt/alerts
+      # - ./channels-backup:/opt/channels-backup
+  # crossref-lookup:
+    # build: externals/crossref-lookup
+    # volumes:
+      # - ./externals/crossref-lookup/app:/usr/src/app
+      # - /etc/localtime:/etc/localtime:ro
+    # environment:
+      # VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.rit.unimaas.nl
+      # LOGSTASH_TAGS: CROSSREF_LOOKUP
+    # networks:
+      # - default
+  # epicpid:
+    # build: externals/epicpid-microservice/docker
+    # volumes:
+      # - ./externals/epicpid-microservice/:/opt/app
+      # - /etc/localtime:/etc/localtime:ro
+    # environment:
+      # VIRTUAL_HOST: epicpid.${RIT_ENV}.rit.unimaas.nl
+      # LOGSTASH_TAGS: EPIC_PID
+      # LOG_LEVEL: DEBUG
+      # USERNAME: user
+      # PASSWORD: foobar
+      # RABBITMQ_HOST : rabbitmq
+      # RABBITMQ_USER : user
+      # RABBITMQ_PASS : password
+      # RABBITMQ_PORT: 5672
+      # EPIC_CREDENTIALS: my_credentials_test.json
+      # REQUESTS_CA_BUNDLE: /opt/epic5storagesurfsaranlCHAIN.crt
+    # networks:
+      # - default
+      # - common_default
+# networks:
+  # oculus_default:
+    # external: true
+  # common_default:
+    # external: true
