--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -8,11 +8,10 @@ ARG ENV_CMAKE_VERSION
 ARG ENV_CMAKE_LONG_VERSION
 ARG ENV_FILEBEAT_VERSION
 
-# Use apt-get NL mirrors
-RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/apt/sources.list && apt-get update
-
-RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+# Use apt-get NL mirrors and install packages
+RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/apt/sources.list && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
     apt-transport-https \
     wget \
     unixodbc \
