Make CIFS mount optional

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,6 @@ services:
       - common_default
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ./irods.secrets.cfg:/etc/secrets:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
   ires:
@@ -88,6 +87,7 @@ services:
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
+      USE_SAMBA: "false"
     networks:
       - default
       - common_default
@@ -97,6 +97,8 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      - ./staging-data/dropzones:/mnt/ingest/zones
+      - ./staging-data/rawdata:/mnt/ingest/shares/rawData
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
   ires-centos:
@@ -119,12 +121,14 @@ services:
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
+      USE_SAMBA: "false"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      - ./staging-data/dropzones:/mnt/ingest/zones
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
     networks:
