Minimal environment with ceph resource.

--- a/ires-ceph/Dockerfile
+++ b/ires-ceph/Dockerfile
@@ -7,7 +7,6 @@ ARG ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
 ARG ENV_CMAKE_VERSION
 ARG ENV_CMAKE_LONG_VERSION
 ARG ENV_DOCKERIZE_VERSION
-ARG ENV_FILEBEAT_VERSION
 
 # Use apt-get NL mirrors
 RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/apt/sources.list && apt-get update
@@ -66,42 +65,25 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key a
     && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    irods-runtime=${IRODS_VERSION} \
+    irods-icommands=${IRODS_VERSION} \
     irods-server=${IRODS_VERSION} \
     irods-dev=${IRODS_VERSION} \
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION}
 
-# install Metalnx RMD
-ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
-RUN dpkg -i /tmp/emc-metalnx-rmd-1.0-1.deb
-
 RUN mkdir /opt/irods
 
 ADD ./setup_responses /etc/irods/setup_responses
 ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
-ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
-ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
-ADD ./add_env_var.py /opt/irods/add_env_var.py
 RUN chmod a+x /opt/irods/*
 
-EXPOSE 1248 1247 8000
-
-###############################################################################
-#                                INSTALLATION FILEBEAT
-###############################################################################
-
-RUN wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ENV_FILEBEAT_VERSION}-amd64.deb -O /tmp/filebeat.deb \
- && dpkg -i /tmp/filebeat.deb
-
-ADD filebeat.yml /etc/filebeat/filebeat.yml
-
-###############################################################################
-
+EXPOSE 1248 1247
 
 
 RUN curl -fSL https://github.com/jwilder/dockerize/releases/download/${ENV_DOCKERIZE_VERSION}/dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz -o dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz
 # With iRODS 4.1.10, iRODS needs a force restart. Waiting for port 1248 is therefore not reliable. Wait for Metalnx RMD instead.
-CMD dockerize -wait tcp://ires:8000 -timeout 250s /opt/irods/bootstrap.sh
+CMD dockerize -wait tcp://irods:1247 -timeout 250s /opt/irods/bootstrap.sh
