--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -55,16 +55,14 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key a
     && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    irods-runtime=${IRODS_VERSION} \
+    irods-icommands=${IRODS_VERSION} \
     irods-server=${IRODS_VERSION} \
     irods-database-plugin-postgres=${IRODS_VERSION} \
     irods-dev=${IRODS_VERSION} \
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION}
-
-# install Metalnx RMD
-ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
-RUN dpkg -i /tmp/emc-metalnx-rmd-1.0-1.deb
 
 RUN mkdir /opt/irods
 
@@ -73,23 +71,10 @@ ADD ./setupdb.sh /opt/irods/setupdb.sh
 ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
 ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
-ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
-ADD ./add_env_var.py /opt/irods/add_env_var.py
 RUN chmod a+x /opt/irods/*
 
-EXPOSE 1248 1247 8000
+EXPOSE 1248 1247
 
 ###############################################################################
-#                                INSTALLATION FILEBEAT
-###############################################################################
-
-RUN wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ENV_FILEBEAT_VERSION}-amd64.deb -O /tmp/filebeat.deb \
- && dpkg -i /tmp/filebeat.deb
-
-ADD filebeat.yml /etc/filebeat/filebeat.yml
-
-###############################################################################
-
-# VOLUME [ "/rules", "/helpers", "/microservices" ]
 
 ENTRYPOINT [ "/opt/irods/bootstrap.sh" ]
