--- a/ires/Dockerfile
+++ b/ires/Dockerfile
@@ -55,6 +55,8 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key a
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     irods-server=${IRODS_VERSION} \
     irods-dev=${IRODS_VERSION} \
+    irods-runtime=${IRODS_VERSION} \
+    irods-icommands=${IRODS_VERSION} \
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION}
