Explicitly specify iRODS version for davRODS(RITDEV-277) (as davrods has no iRODS 4.2.5 release yet and still depends on irods-runtime-4.2.4)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,7 +169,7 @@ services:
     build:
       context: externals/rit-davrods/
       args:
-        ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
+        ENV_DAVRODS_IRODS_VERSION: ${ENV_DAVRODS_IRODS_VERSION}
         ENV_DAVRODS_VERSION: ${ENV_DAVRODS_VERSION}
     environment:
       VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
