Get iRODS version from environment during CMake microservice compile time (RITDEV-277)

--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -92,4 +92,7 @@ ADD filebeat.yml /etc/filebeat/filebeat.yml
 
 VOLUME [ "/rules", "/helpers", "/microservices" ]
 
+# Propagate (some) build arguments to runtime ENV vars
+ENV ENV_IRODS_VERSION=${ENV_IRODS_VERSION}
+
 ENTRYPOINT [ "/opt/irods/bootstrap.sh" ]
