--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     build:
       context: pacman/
       args:
-        ENV_XDEBUG_VERSION: ${ENV_XDEBUG_VERSION}
-        ENV_DRUPAL_VERSION: ${ENV_DRUPAL_VERSION}
-        ENV_DRUPAL_VERSION_MD5: ${ENV_DRUPAL_VERSION_MD5}
-        ENV_ISLANDORA_VERSION: ${ENV_ISLANDORA_VERSION}
-        ENV_DOCKERIZE_VERSION: ${ENV_DOCKERIZE_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_XDEBUG_VERSION
+        - ENV_DRUPAL_VERSION
+        - ENV_DRUPAL_VERSION_MD5
+        - ENV_ISLANDORA_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: pacman
     volumes:
       - /etc/localtime:/etc/localtime:ro
@@ -40,12 +40,12 @@ services:
     build:
       context: icat/
       args:
-        ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
-        ENV_IRODS_EXT_CLANG_VERSION: ${ENV_IRODS_EXT_CLANG_VERSION}
-        ENV_IRODS_EXT_CLANG_RUNTIME_VERSION: ${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION}
-        ENV_CMAKE_VERSION: ${ENV_CMAKE_VERSION}
-        ENV_CMAKE_LONG_VERSION: ${ENV_CMAKE_LONG_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_CMAKE_VERSION
+        - ENV_CMAKE_LONG_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: irods
     ports:
       - "1247:1247"
@@ -72,13 +72,13 @@ services:
     build:
       context: ires/
       args:
-        ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
-        ENV_IRODS_EXT_CLANG_VERSION: ${ENV_IRODS_EXT_CLANG_VERSION}
-        ENV_IRODS_EXT_CLANG_RUNTIME_VERSION: ${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION}
-        ENV_CMAKE_VERSION: ${ENV_CMAKE_VERSION}
-        ENV_CMAKE_LONG_VERSION: ${ENV_CMAKE_LONG_VERSION}
-        ENV_DOCKERIZE_VERSION: ${ENV_DOCKERIZE_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_CMAKE_VERSION
+        - ENV_CMAKE_LONG_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: ires
     environment:
       RODS_PASSWORD: irods
@@ -103,13 +103,13 @@ services:
     build:
       context: ires-centos/
       args:
-        ENV_IRODS_VERSION: ${ENV_IRODS_VERSION}
-        ENV_IRODS_EXT_CLANG_VERSION: ${ENV_IRODS_EXT_CLANG_VERSION}
-        ENV_IRODS_EXT_CLANG_RUNTIME_VERSION: ${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION}
-        ENV_CMAKE_VERSION: ${ENV_CMAKE_VERSION}
-        ENV_CMAKE_LONG_VERSION: ${ENV_CMAKE_LONG_VERSION}
-        ENV_DOCKERIZE_VERSION: ${ENV_DOCKERIZE_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_CMAKE_VERSION
+        - ENV_CMAKE_LONG_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: ires-centos
     environment:
       RODS_PASSWORD: irods
@@ -151,9 +151,9 @@ services:
     build:
       context: externals/irods-frontend/
       args:
-        ENV_IRODS_REST_VERSION: ${ENV_IRODS_REST_VERSION}
-        ENV_CLOUDBROWSER_VERSION: ${ENV_CLOUDBROWSER_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_IRODS_REST_VERSION
+        - ENV_CLOUDBROWSER_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: irods-frontend
     environment:
       VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
@@ -169,8 +169,8 @@ services:
     build:
       context: externals/rit-davrods/
       args:
-        ENV_DAVRODS_IRODS_VERSION: ${ENV_DAVRODS_IRODS_VERSION}
-        ENV_DAVRODS_VERSION: ${ENV_DAVRODS_VERSION}
+        - ENV_DAVRODS_IRODS_VERSION
+        - ENV_DAVRODS_VERSION
     environment:
       VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
       LOGSTASH_TAGS: DAVRODS
@@ -197,8 +197,8 @@ services:
     build:
       context: mirthconnect/
       args:
-        ENV_MIRTH_CONNECT_VERSION: ${ENV_MIRTH_CONNECT_VERSION}
-        ENV_FILEBEAT_VERSION: ${ENV_FILEBEAT_VERSION}
+        - ENV_MIRTH_CONNECT_VERSION
+        - ENV_FILEBEAT_VERSION
     hostname: mirthconnect
     ports:
       - "8443:8443"
