--- a/.env
+++ b/.env
@@ -7,8 +7,10 @@
 ENV_IRODS_VERSION=4.2.5
 ENV_IRODS_EXT_CLANG_VERSION=3.8-0
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
-ENV_CMAKE_VERSION=3.12
-ENV_CMAKE_LONG_VERSION=3.12.0
+
+# ires-centos
+ENV_CMAKE_VERSION=3.5
+ENV_CMAKE_LONG_VERSION=3.5.1
 
 # iRODS-frontend
 ENV_IRODS_REST_VERSION=4.1.10.0-RC1
