Added CEPH cluster with 3 OSDs

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-CEPH_CONTAINER_VERSION=v3.1.0-stable-3.1-luminous-ubuntu-16.04-x86_64
 CEPH_CONTAINER_VERSION=master-f5054d6-luminous-opensuse-42.3-x86_64
-VOLUMES_PATH=~/volumes_data/ceph
+VOLUMES_PATH=~/rados-support/docker-dev/volumes_data/ceph
+DISKS_PATH=~/rados-support/docker-dev/volumes_data/disks
 DASHBOARD_PORT=7000
 RGW_PORT=8080
-OSD1_DEVICE=/dev/cepha
-OSD2_DEVICE=/dev/cephb
-OSD3_DEVICE=/dev/cephc
-MON1_IP=172.18.0.2
-MON1_CEPH_PUBLIC_NETWORK=172.18.0.0/24
+OSD_SIZE=3G
+OSD1_DEVICE=/dev/loop0
+OSD2_DEVICE=/dev/loop1
+OSD3_DEVICE=/dev/loop2
+MON_IP=172.18.0.240
+CEPH_PUBLIC_NETWORK=172.18.0.0/24
