Fix bug where dh-mailer could not be reached. Use internal docker network.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       OLS_URL: http://ols.tst.rit.unimaas.nl
       LOGSTASH_TAGS: PACMAN
       JWT_SECRET: foobar
-      DH_MAILER_ENDPOINT: http://mailer.${RIT_ENV}.rit.unimaas.nl/email/send
+      DH_MAILER_HOST: mailer
       DH_MAILER_TO_ADDRESS: m.coonen@maastrichtuniversity.nl
       DH_MAILER_USERNAME: user
       DH_MAILER_PASSWORD: password
