Synchronize postgres client (irods container) and server version (irods-db container) (RITDEV-588)

--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ ENV_MIRTH_CONNECT_VERSION=3.7.0.b2399
 
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
+## Note: postgres version is also used by irods (icat) container
 ENV_POSTGRES_VERSION=9.4
 
 # Other (used in various containers)
