--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:16.04
 
 # Load build arguments from environment
+ARG ENV_POSTGRES_VERSION
 ARG ENV_IRODS_VERSION
 ARG ENV_IRODS_EXT_CLANG_VERSION
 ARG ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
@@ -14,8 +15,6 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     wget \
     unixodbc \
     super \
-    odbc-postgresql \
-    postgresql-client \
     libfuse2 \
     libjson-perl \
     librabbitmq-dev \
@@ -36,10 +35,17 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     cmake
     # }} end
 
-ENV IRODS_VERSION ${ENV_IRODS_VERSION}
+# Make sure to use the same postgres version for client and irods-db server
+RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
+    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
+    && apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    postgresql-client-${ENV_POSTGRES_VERSION} \
+    odbc-postgresql
 
 # install iRODS
-RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
+ENV IRODS_VERSION ${ENV_IRODS_VERSION}
+RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - \
     && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
