Changed from compiling from source to install of dpkg for S3 plugin

--- a/ires-s3-2/Dockerfile
+++ b/ires-s3-2/Dockerfile
@@ -75,6 +75,9 @@ ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
 ADD ./add_env_var.py /opt/irods/add_env_var.py
 RUN chmod a+x /opt/irods/*
 
+ADD ./irods-resource-plugin-s3_2.5.0~xenial_amd64.deb /tmp/irods-resource-plugin-s3_2.5.0~xenial_amd64.deb
+
+
 EXPOSE 1248 1247 8000
 
 ###############################################################################
