Start for separating the dockerfiles for pacman into separate repository. RITDEV-658.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   pacman:
     build:
-      context: pacman/
+      context: externals/dh-rdm-service-docker/dev
       args:
         - ENV_XDEBUG_VERSION
         - ENV_DRUPAL_VERSION
