Combined ires-s3-1 and ires-s3-2 build environments to single ires-s3 environment (RITDEV-659)

--- a/.env
+++ b/.env
@@ -33,3 +33,9 @@ ENV_POSTGRES_VERSION=9.4
 # Other (used in various containers)
 ENV_DOCKERIZE_VERSION=v0.2.0
 ENV_FILEBEAT_VERSION=5.2.0
+
+# S3 related
+ENV_S3_ACCESS_KEY1=ABCDEFGHIJKLMNOPQRST
+ENV_S3_SECRET_KEY1=ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNO
+ENV_S3_ACCESS_KEY2=BCDEFGHIJKLMNOPQRSTU
+ENV_S3_SECRET_KEY2=BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
